--- a/.github/workflows/docker-auto-test.yaml
+++ b/.github/workflows/docker-auto-test.yaml
@@ -3,34 +3,16 @@ name: Testing pipeline
 on:
   pull_request:
     branches:
-      - '*'  # This will trigger the workflow for PRs to any branch
+      - '*'
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:14.2
-        env:
-          POSTGRES_DB: lcfs
-          POSTGRES_USER: lcfs
-          POSTGRES_PASSWORD: development_only
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-
-      redis:
-        image: bitnami/redis:6.2.5
-        env:
-          REDIS_PASSWORD: development_only
-        ports:
-          - 6379:6379
-
     steps:
     - uses: actions/checkout@v3
       with:
-        ref: ${{ github.event.pull_request.head.sha }}  # This checks out the PR branch
+        ref: ${{ github.event.pull_request.head.sha }}
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -50,6 +32,15 @@ jobs:
         cd backend
         poetry config virtualenvs.create false
         poetry install
+
+    - name: Fix docker-compose.yml
+      run: |
+        sed -i 's/: true/: "true"/g; s/: false/: "false"/g' docker-compose.yml
+
+    - name: Build and start services
+      run: |
+        docker-compose build
+        docker-compose up -d
 
     - name: Run backend tests
       id: backend_tests
@@ -79,20 +70,13 @@ jobs:
       run: |
         cd frontend
         npm test
-    - name: Fix docker-compose.yml
-      run: |
-          sed -i 's/LCFS_RELOAD: true/LCFS_RELOAD: "true"/' docker-compose.yml
-    - name: Build and start services
-      run: |
-        docker-compose build
-        docker-compose up -d
 
     - name: Run Cypress tests
       id: cypress_tests
       continue-on-error: true
       uses: cypress-io/github-action@v5
       with:
-        command: npm run test:e2e
+        command: npm run cypress:run
         wait-on: 'http://localhost:3000, http://localhost:8000'
         working-directory: frontend
       env:
