--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -18,68 +18,68 @@ concurrency:
 
 jobs:
 
-  build:
-    if: contains(github.event.pull_request.labels.*.name, 'build')
-    name: Build LCFS
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
+  # build:
+  #   if: contains(github.event.pull_request.labels.*.name, 'build')
+  #   name: Build LCFS
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 60
 
-    steps:
+  #   steps:
 
-      - name: Check out repository
-        uses: actions/checkout@v4.1.1
-        with: 
-          ref: ${{ github.event.pull_request.head.ref }} 
+  #     - name: Check out repository
+  #       uses: actions/checkout@v4.1.1
+  #       with: 
+  #         ref: ${{ github.event.pull_request.head.ref }} 
 
-      - name: verify ref
-        run: |
-          pwd
-          ls -la
-          cat .github/workflows/pr-build.yaml
-          echo ${{ env.PR_NUMBER }}
-          echo ${{ env.GIT_URL }}
-          echo ${{ env.GIT_REF }}
+  #     - name: verify ref
+  #       run: |
+  #         pwd
+  #         ls -la
+  #         cat .github/workflows/pr-build.yaml
+  #         echo ${{ env.PR_NUMBER }}
+  #         echo ${{ env.GIT_URL }}
+  #         echo ${{ env.GIT_REF }}
 
-      - name: Log in to Openshift
-        uses: redhat-actions/oc-login@v1.3
-        with:
-          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER }}
-          openshift_token: ${{ secrets.OPENSHIFT_TOKEN }}
-          insecure_skip_tls_verify: true
-          namespace: ${{ env.TOOLS_NAMESPACE }}
+  #     - name: Log in to Openshift
+  #       uses: redhat-actions/oc-login@v1.3
+  #       with:
+  #         openshift_server_url: ${{ secrets.OPENSHIFT_SERVER }}
+  #         openshift_token: ${{ secrets.OPENSHIFT_TOKEN }}
+  #         insecure_skip_tls_verify: true
+  #         namespace: ${{ env.TOOLS_NAMESPACE }}
 
-      - name: Build LCFS Backend
-        run: |
-          cd openshift/templates
-          oc process -f ./backend-bc.yaml VERSION=${{ env.VERSION }}-${{ env.PR_NUMBER }} GIT_URL=${{ env.GIT_URL }} GIT_REF=${{ github.event.pull_request.head.ref }} | oc apply --wait=true -f - -n ${{ env.TOOLS_NAMESPACE }}
-          sleep 2s
-          for build in $(oc -n ${{ env.TOOLS_NAMESPACE }} get builds -l buildconfig=lcfs-backend-${{ env.VERSION }}-${{ env.PR_NUMBER }} -o jsonpath='{.items[?(@.status.phase=="Running")].metadata.name}'); do
-            oc -n ${{ env.TOOLS_NAMESPACE }} cancel-build $build --wait=true
-          done
-          sleep 2s
-          oc -n ${{ env.TOOLS_NAMESPACE }} start-build lcfs-backend-${{ env.VERSION }}-${{ env.PR_NUMBER }} --wait=true
-          sleep 2s
-          oc tag ${{ env.TOOLS_NAMESPACE }}/lcfs-backend:${{ env.VERSION }}-${{ env.PR_NUMBER }} ${{ env.DEV_NAMESPACE }}/lcfs-backend:${{ env.VERSION }}-${{ env.PR_NUMBER }}
+  #     - name: Build LCFS Backend
+  #       run: |
+  #         cd openshift/templates
+  #         oc process -f ./backend-bc.yaml VERSION=${{ env.VERSION }}-${{ env.PR_NUMBER }} GIT_URL=${{ env.GIT_URL }} GIT_REF=${{ github.event.pull_request.head.ref }} | oc apply --wait=true -f - -n ${{ env.TOOLS_NAMESPACE }}
+  #         sleep 2s
+  #         for build in $(oc -n ${{ env.TOOLS_NAMESPACE }} get builds -l buildconfig=lcfs-backend-${{ env.VERSION }}-${{ env.PR_NUMBER }} -o jsonpath='{.items[?(@.status.phase=="Running")].metadata.name}'); do
+  #           oc -n ${{ env.TOOLS_NAMESPACE }} cancel-build $build --wait=true
+  #         done
+  #         sleep 2s
+  #         oc -n ${{ env.TOOLS_NAMESPACE }} start-build lcfs-backend-${{ env.VERSION }}-${{ env.PR_NUMBER }} --wait=true
+  #         sleep 2s
+  #         oc tag ${{ env.TOOLS_NAMESPACE }}/lcfs-backend:${{ env.VERSION }}-${{ env.PR_NUMBER }} ${{ env.DEV_NAMESPACE }}/lcfs-backend:${{ env.VERSION }}-${{ env.PR_NUMBER }}
 
-      - name: Build LCFS Frontend
-        run: |
-          cd openshift/templates
-          oc process -f ./frontend-bc.yaml VERSION=${{ env.VERSION }}-${{ env.PR_NUMBER }} GIT_URL=${{ env.GIT_URL }} GIT_REF=${{ github.event.pull_request.head.ref }} | oc apply --wait=true -f - -n ${{ env.TOOLS_NAMESPACE }}
-          sleep 2s
-          for build in $(oc -n ${{ env.TOOLS_NAMESPACE }} get builds -l buildconfig=lcfs-frontend-${{ env.VERSION }}-${{ env.PR_NUMBER }} -o jsonpath='{.items[?(@.status.phase=="Running")].metadata.name}'); do
-            oc -n ${{ env.TOOLS_NAMESPACE }} cancel-build $build --wait=true
-          done
-          sleep 2s
-          oc -n ${{ env.TOOLS_NAMESPACE }} start-build lcfs-frontend-${{ env.VERSION }}-${{ env.PR_NUMBER }} --wait=true
-          sleep 2s
-          oc tag ${{ env.TOOLS_NAMESPACE }}/lcfs-frontend:${{ env.VERSION }}-${{ env.PR_NUMBER }} ${{ env.DEV_NAMESPACE }}/lcfs-frontend:${{ env.VERSION }}-${{ env.PR_NUMBER }}
+  #     - name: Build LCFS Frontend
+  #       run: |
+  #         cd openshift/templates
+  #         oc process -f ./frontend-bc.yaml VERSION=${{ env.VERSION }}-${{ env.PR_NUMBER }} GIT_URL=${{ env.GIT_URL }} GIT_REF=${{ github.event.pull_request.head.ref }} | oc apply --wait=true -f - -n ${{ env.TOOLS_NAMESPACE }}
+  #         sleep 2s
+  #         for build in $(oc -n ${{ env.TOOLS_NAMESPACE }} get builds -l buildconfig=lcfs-frontend-${{ env.VERSION }}-${{ env.PR_NUMBER }} -o jsonpath='{.items[?(@.status.phase=="Running")].metadata.name}'); do
+  #           oc -n ${{ env.TOOLS_NAMESPACE }} cancel-build $build --wait=true
+  #         done
+  #         sleep 2s
+  #         oc -n ${{ env.TOOLS_NAMESPACE }} start-build lcfs-frontend-${{ env.VERSION }}-${{ env.PR_NUMBER }} --wait=true
+  #         sleep 2s
+  #         oc tag ${{ env.TOOLS_NAMESPACE }}/lcfs-frontend:${{ env.VERSION }}-${{ env.PR_NUMBER }} ${{ env.DEV_NAMESPACE }}/lcfs-frontend:${{ env.VERSION }}-${{ env.PR_NUMBER }}
           
   deploy:
     if: contains(github.event.pull_request.labels.*.name, 'build')
     name: Deploy LCFS
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    needs: [build]
+    # needs: [build]
 
     steps:
       
@@ -109,7 +109,7 @@ jobs:
                 yq -i '.keycloak.postLogoutUrl = "https://lcfs-dev-${{ env.PR_NUMBER }}.apps.silver.devops.gov.bc.ca/"' lcfs/charts/lcfs-frontend/values-dev-pr.yaml
                 yq -i '.image.tag = "${{ env.VERSION }}-${{ env.PR_NUMBER }}"' lcfs/charts/lcfs-backend/values-dev-pr.yaml
                 yq -i '.route.host = "lcfs-backend-dev-${{ env.PR_NUMBER }}.apps.silver.devops.gov.bc.ca"' lcfs/charts/lcfs-backend/values-dev-pr.yaml
-                yq -i eval '(.env[] | select(.name == "LCFS_DB_HOST") | .value) = "lcfs-postgresql-dev-${{ env.PR_NUMBER }}-postgresql.${{ env.DEV_NAMESPACE }}.svc.cluster.local"' lcfs/charts/lcfs-backend/values-dev-pr.yaml
+                yq -i eval '(.env[] | select(.name == "LCFS_DB_HOST") | .value) = "lcfs-postgres-dev-${{ env.PR_NUMBER }}-postgresql.${{ env.DEV_NAMESPACE }}.svc.cluster.local"' lcfs/charts/lcfs-backend/values-dev-pr.yaml
                 yq -i eval '(.env[] | select(.name == "LCFS_REDIS_HOST") | .value) = "lcfs-redis-dev-${{ env.PR_NUMBER }}-master.${{ env.DEV_NAMESPACE }}.svc.cluster.local"' lcfs/charts/lcfs-backend/values-dev-pr.yaml
 
       # There is no need to push the changes back to deployment repo as argocd is not used for the pr build deployment
