--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -3,6 +3,9 @@ name: PR Build on Dev
 on:
   pull_request:
     types: [labeled, synchronize]
+    # paths:
+    #   - frontend/**
+    #   - backend/**
 
 env:
   VERSION: 0.2.0
