--- a/.github/workflows/pr-teardown.yaml
+++ b/.github/workflows/pr-teardown.yaml
@@ -16,7 +16,7 @@ concurrency:
 jobs:
 
   teardown:
-    if: contains(github.event.pull_request.labels.*.name, 'build')
+    if: github.event.label.name == 'build'
     name: PR Teardown
     runs-on: ubuntu-latest
     timeout-minutes: 60
