--- a/.github/workflows/pr-teardown.yaml
+++ b/.github/workflows/pr-teardown.yaml
@@ -16,7 +16,7 @@ concurrency:
 jobs:
 
   teardown:
-    if: contains(github.event.pull_request.labels.*.name, 'build')
+    if: github.event.label.name == 'build'
     name: PR Teardown
     runs-on: ubuntu-latest
     timeout-minutes: 60
@@ -37,6 +37,5 @@ jobs:
           helm -n ${{ env.DEV_NAMESPACE }} uninstall lcfs-backend-dev-${{ env.PR_NUMBER }}
           helm -n ${{ env.DEV_NAMESPACE }} uninstall lcfs-redis-dev-${{ env.PR_NUMBER }}
           helm -n ${{ env.DEV_NAMESPACE }} uninstall lcfs-postgres-dev-${{ env.PR_NUMBER }}
-          helm -n ${{ env.DEV_NAMESPACE }} delete pvc -l app.kubernetes.io/instance=lcfs-postgres-dev-${{ env.PR_NUMBER }}
-          helm -n ${{ env.DEV_NAMESPACE }} delete pvc -l app.kubernetes.io/instance=lcfs-redis-dev-${{ env.PR_NUMBER }}
-
+          oc -n ${{ env.DEV_NAMESPACE }} delete pvc -l app.kubernetes.io/instance=lcfs-postgres-dev-${{ env.PR_NUMBER }}
+          oc -n ${{ env.DEV_NAMESPACE }} delete pvc -l app.kubernetes.io/instance=lcfs-redis-dev-${{ env.PR_NUMBER }}
