--- a/.github/workflows/devops-test.yaml
+++ b/.github/workflows/devops-test.yaml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - id: get-version
         run: |
-          default-release=${{ github.event.repository.default_branch }}
+          default-release="${{ github.event.repository.default_branch }}"
           version=$(echo "$default-release" | sed -E 's/release-(.*)/\1/')
           echo "VERSION=$version" >> $GITHUB_OUTPUT
 
