--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -60,6 +60,7 @@ jobs:
           echo ${{ env.PR_NUMBER }}
           echo ${{ env.GIT_URL }}
           echo ${{ env.GIT_REF }}
+          echo ${{ env.VERSION }}
 
       - name: Log in to Openshift
         uses: redhat-actions/oc-login@v1.3
