--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -3,12 +3,11 @@ name: PR Build on Dev
 on:
   pull_request:
     types: [labeled, synchronize]
-    # paths:
-    #   - frontend/**
-    #   - backend/**
+    paths:
+      - frontend/**
+      - backend/**
 
 env:
-  # VERSION: 0.2.0
   GIT_URL: https://github.com/bcgov/lcfs.git 
   TOOLS_NAMESPACE: ${{ secrets.OPENSHIFT_NAMESPACE_PLATE }}-tools
   DEV_NAMESPACE: ${{ secrets.OPENSHIFT_NAMESPACE_PLATE }}-dev
